--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,16 @@
 ---
-
+import HomeHero from "../layouts/HomeHero.astro";
+import MerchSection from "../layouts/MerchSection.astro";
+import Layout from "../layouts/Layout.astro";
+import TiersSection from "../layouts/TiersSection.astro";
+import TestimonialSection from "../layouts/TestimonialSection.astro";
+import FaqSection from "../layouts/FaqSection.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title="Luca Farewell Fund" link="https://freedomflotilla.info/sostieni-freedom-flotilla-italia/">
+  <HomeHero />
+  <MerchSection />
+  <TiersSection link="https://freedomflotilla.info/sostieni-freedom-flotilla-italia/" />
+  <TestimonialSection />
+  <FaqSection />
+</Layout>
