--- a/src/components/Product.astro
+++ b/src/components/Product.astro
@@ -1,5 +1,6 @@
 ---
 import { Image } from "astro:assets";
+import Button from "./Button.astro";
 import Currency from "./Currency.astro";
 
 const { title, subtitle, image, price, description } = Astro.props;
@@ -16,8 +17,6 @@ const { title, subtitle, image, price, description } = Astro.props;
   <p class="mt-3 text-sm text-white/90 flex-1">{description}</p>
   <div class="flex items-center justify-between">
     <span class="text-lg font-bold"><Currency value={price} currency="EUR" /></span>
-    <a href="#donate" class="text-xs px-3 py-2 rounded-lg bg-white bg-secondary-hover font-semibold text-black">
-      Aggiungi
-    </a>
+    <Button href="#donate" size="xs" fw="semibold">Aggiungi</Button>
   </div>
 </article>
