--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,4 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 @import "tailwindcss";
+
+@theme {
+  --font-display: "Open Sans", sans-serif;
+}
 
 /* Globals */
 html {
