--- a/src/layouts/SpotifySection.astro
+++ b/src/layouts/SpotifySection.astro
@@ -20,9 +20,9 @@ const songs = shuffle(playlist.songs);
               <span class="tracking-normal text-primary font-semibold">{index + 1}. </span>
               {title}
             </h2>
-            <div class="flex gap-2 text-xs text-black/60">
+            <div class="flex gap-2 text-xs text-black/60 flex-wrap">
               {tags.map((tag) => (
-                <span class="bg-black text-white px-2 py-1 rounded-sm">#{tag}</span>
+                <span class="bg-black text-white px-2 py-1 rounded-sm text-nowrap">#{tag}</span>
               ))}
             </div>
             <p class="text-black/80 whitespace-pre-wrap">{description}</p>
