fix: Remove shuffle function from song list

--- a/src/layouts/SpotifySection.astro
+++ b/src/layouts/SpotifySection.astro
@@ -1,8 +1,7 @@
 ---
 import playlist from "../data/playlist.json";
-import { shuffle } from "../utils/array";
 
-const songs = shuffle(playlist.songs);
+const songs = playlist.songs;
 ---
 
 <section id="spotify" class="py-12 md:py-16 bg-white/80 font-mono">
