--- a/src/layouts/HomeHero.astro
+++ b/src/layouts/HomeHero.astro
@@ -48,7 +48,7 @@ import Currency from "../components/Currency.astro";
         </div>
         <div class="mt-2 flex items-center justify-between text-xs text-zinc-600">
           <span id="percent">33%</span>
-          <span id="donors">42 donatori</span>
+          <span><span id="donors">42</span> donatori</span>
         </div>
       </div>
       <ul class="mt-5 space-y-2 text-sm">
@@ -58,11 +58,16 @@ import Currency from "../components/Currency.astro";
         </li>
         <li class="flex items-center gap-2">
           <span class="inline-grid place-items-center size-5 rounded-full bg-primary text-black">✔</span> Documentazione
-          aggiornata: in lavorazione (da 5 anni)
+          aggiornata: in lavorazione (da quasi 5 anni)
         </li>
         <li class="flex items-center gap-2">
           <span class="inline-grid place-items-center size-5 rounded-full bg-primary text-black">✔</span> Festa d'addio:
-          work in progress
+          al <a
+            href="https://www.instagram.com/turnebar/?hl=en"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="underline decoration-dotted hover:no-underline">Turné</a
+          >
         </li>
       </ul>
     </div>
