--- a/src/layouts/MerchSection.astro
+++ b/src/layouts/MerchSection.astro
@@ -7,7 +7,7 @@ import products from "../data/products.json";
   <div class="mx-auto max-w-6xl px-4">
     <div class="flex items-end justify-between gap-4 text-black">
       <h2 class="text-2xl md:text-3xl font-bold">I nostri prodotti devastanti</h2>
-      <a href="#donate" class="hidden sm:display text-sm underline decoration-dotted hover:no-underline"
+      <a href="#donate" class="hidden sm:block text-sm underline decoration-dotted hover:no-underline"
         >Vedi le ricompense</a
       >
     </div>
