--- a/src/layouts/TiersSection.astro
+++ b/src/layouts/TiersSection.astro
@@ -46,7 +46,7 @@ const { link } = Astro.props;
         </div>
         <p class="mt-4 text-3xl font-extrabold">€15</p>
         <ul class="mt-3 space-y-2 text-sm text-black/90 flex-1 mb-5">
-          <li class="flex gap-2"><span>✔</span><span>Tutto quello per gli Early Bugmaker +</span></li>
+          <li class="flex gap-2"><span>✔</span><span>Tutto quello per Early Bugmaker +</span></li>
           <li class="flex gap-2"><span>✔</span><span>Quattro Tab Tab in omaggio</span></li>
           <li class="flex gap-2"><span>✔</span><span>Poster digitale della Blockchain</span></li>
           <li class="flex gap-2"><span>✔</span><span>Attestato “Sopravvissuto a Beste”</span></li>
@@ -68,7 +68,7 @@ const { link } = Astro.props;
         </div>
         <p class="mt-4 text-3xl font-extrabold">€49</p>
         <ul class="mt-3 space-y-2 text-sm text-black/90 flex-1 mb-5">
-          <li class="flex gap-2"><span>✔</span><span>Tutto quello per i More or Less Lead +</span></li>
+          <li class="flex gap-2"><span>✔</span><span>Tutto quello per More or Less Lead +</span></li>
           <li class="flex gap-2"><span>✔</span><span>Sticker “Addio sindaco Sala”</span></li>
           <li class="flex gap-2"><span>✔</span><span>Foto con la gatta (se lei acconsente)</span></li>
         </ul>
