fix: Remove trailing slash from Spotify button links

--- a/src/pages/mangrovia.astro
+++ b/src/pages/mangrovia.astro
@@ -7,8 +7,7 @@ import Button from "../components/Button.astro";
 
 <Layout title="Luca Farewell Multiverse" description="Attenti a non esagerare con gli Agenti AI">
   <Fragment slot="nav">
-    <Button href="/spotify/" fw="bold" size="sm">🎹<span class="hidden sm:inline">&nbsp;&nbsp;La playlist</span></Button
-    >
+    <Button href="/spotify" fw="bold" size="sm">🎹<span class="hidden sm:inline">&nbsp;&nbsp;La playlist</span></Button>
     <Button href="/" fw="bold" size="sm" primary>Dona<span class="hidden sm:inline"> ora</span></Button>
   </Fragment>
   <Image
