--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,8 +14,7 @@ import Button from "../components/Button.astro";
   link="https://freedomflotilla.info/sostieni-freedom-flotilla-italia/"
 >
   <Fragment slot="nav">
-    <Button href="/spotify/" fw="bold" size="sm">🎹<span class="hidden sm:inline">&nbsp;&nbsp;La playlist</span></Button
-    >
+    <Button href="/spotify" fw="bold" size="sm">🎹<span class="hidden sm:inline">&nbsp;&nbsp;La playlist</span></Button>
     <Button href="#donate" fw="bold" size="sm" primary>Dona<span class="hidden sm:inline"> ora</span></Button>
   </Fragment>
   <HomeHero />
