fix: Update favicon link and add new favicon image

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ const { description, link, title } = Astro.props;
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{title}</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="93x93" />
+    <link rel="icon" href="/favicon.png" type="image/x-icon" sizes="90x90" />
     <meta
       name="description"
       content="Birre, patch e biglietto per Losanna. Parodia charity, link reale alla Global Sumud Flotilla."
