--- a/src/pages/mangrovia.astro
+++ b/src/pages/mangrovia.astro
@@ -10,13 +10,15 @@ import Button from "../components/Button.astro";
     <Button href="/spotify" fw="bold" size="sm">🎹<span class="hidden sm:inline">&nbsp;&nbsp;La playlist</span></Button>
     <Button href="/" fw="bold" size="sm" primary>Dona<span class="hidden sm:inline"> ora</span></Button>
   </Fragment>
-  <Image
-    src={src}
-    alt="Mangrovia Multiverse"
-    width={1536}
-    height={1024}
-    class="w-full"
-    loading="lazy"
-    decoding="async"
-  />
+  <div class="pt-3">
+    <Image
+      src={src}
+      alt="Mangrovia Multiverse"
+      width={1536}
+      height={1024}
+      class="w-full"
+      loading="lazy"
+      decoding="async"
+    />
+  </div>
 </Layout>
