fix: Update shadow class for <a> element in Button component

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -8,7 +8,7 @@ const fontWeightClass = fw ? `font-${fw}` : "";
 ---
 
 <a
-  class=`${sizeClass} ${fontWeightClass} rounded-lg ${bgClass} transition-colors text-black shadow text-center`
+  class=`${sizeClass} ${fontWeightClass} rounded-lg ${bgClass} transition-colors text-black shadow-md text-center`
   {...props}
 >
   <slot />
