--- a/src/layouts/SpotifySection.astro
+++ b/src/layouts/SpotifySection.astro
@@ -8,18 +8,18 @@ const songs = playlist.songs;
   <section id="spotify" class="py-12 md:py-16 bg-white/95 font-mono">
     <div class="mx-auto max-w-6xl px-4 text-black">
       <header class="text-center mb-10 flex flex-col gap-6">
-        <h1 class="text-primary text-3xl md:text-4xl uppercase font-extrabold tracking-wider text-shadow-md">
+        <h1 class="text-mang text-3xl md:text-4xl uppercase font-extrabold tracking-wider text-shadow-md">
           La playlist
         </h1>
         <p class="text-lg text-black/80 whitespace-pre-wrap">{playlist.intro}</p>
-        <hr class="w-[240px] mx-auto border-b-4 border-primary shadow-md" />
+        <hr class="w-[240px] mx-auto border-b-4 border-mang shadow-md" />
       </header>
       <div class="flex flex-col divide-y-1 gap-6">
         {
           songs.map(({ description, embed, tags, title }, index) => (
             <article class="flex flex-col gap-2 pb-6">
               <h2 class="text-xl md:text-2xl font-extrabold uppercase tracking-wider ">
-                <span class="tracking-normal text-primary font-semibold text-shadow-md">{index + 1}. </span>
+                <span class="tracking-normal text-mang font-semibold">{index + 1}. </span>
                 {title}
               </h2>
               <div class="flex gap-2 text-xs uppercase text-black/60 flex-wrap">
@@ -31,6 +31,7 @@ const songs = playlist.songs;
               <iframe
                 data-testid="embed-iframe"
                 style="border-radius:12px"
+                class="shadow-md"
                 src={embed}
                 width="100%"
                 height="152"
