--- a/src/pages/mangrovia.astro
+++ b/src/pages/mangrovia.astro
@@ -112,8 +112,8 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
       <div class="border-2 border-mang overflow-hidden">
         <Image
           src={whatSrc}
-          alt="Что здесь происходит?"
-          title="Что здесь происходит?"
+          alt="Che cosa sta succedendo?"
+          title="Che cosa sta succedendo?"
           width={1024}
           height={1536}
           class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
@@ -176,8 +176,8 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
       <div class="border-2 border-mang overflow-hidden">
         <Image
           src={adrianiSrc}
-          alt="Adriani, la serie"
-          title="Adriani, la serie"
+          alt="Adriano, la serie"
+          title="Adriano, la serie"
           width={1024}
           height={1024}
           class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
