fix: Update image class to use full width in mangrovia.astro

--- a/src/pages/mangrovia.astro
+++ b/src/pages/mangrovia.astro
@@ -40,7 +40,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="Multiverso Mangrovia"
           width={1536}
           height={1024}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -54,7 +54,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="TAB TAB TAB TAB!!!"
           width={1024}
           height={1024}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -66,7 +66,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="Commit via Fax"
           width={1024}
           height={1024}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -78,7 +78,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="Bestemmie in comasco"
           width={1024}
           height={1024}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -92,7 +92,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="Super Fiorenzo"
           width={1024}
           height={1536}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -104,7 +104,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="Adriano faints, Luca quits"
           width={1024}
           height={1536}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -116,7 +116,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="Che cosa sta succedendo?"
           width={1024}
           height={1536}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -128,7 +128,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="Adriano abbattuto da un meteorite"
           width={1024}
           height={1536}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -142,7 +142,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="Prendi il sindaco"
           width={1536}
           height={1024}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -154,7 +154,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="Clean Code e bestemmie"
           width={1536}
           height={1024}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -166,7 +166,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="Fare schifo dalle Monache"
           width={1536}
           height={1024}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -180,7 +180,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="Adriano, la serie"
           width={1024}
           height={1024}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -192,7 +192,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="Economico Programmatore"
           width={1024}
           height={1024}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -204,7 +204,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="RABBIA!!"
           width={1024}
           height={1024}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -216,7 +216,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="Il nuovo team di Frontend"
           width={1024}
           height={1024}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -230,7 +230,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="Tribunale dei Crimini Frontend"
           width={1536}
           height={1024}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -242,7 +242,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="Lunch Break Deluxe"
           width={1536}
           height={1024}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -254,7 +254,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
           title="È un bug del backend"
           width={1536}
           height={1024}
-          class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+          class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
           loading="lazy"
           decoding="async"
         />
@@ -281,7 +281,7 @@ import frontendSrc from "../images/frontendisti-calabresi.png";
               title="Frontendisti calabresi"
               width={1536}
               height={1024}
-              class="h-auto max-w-full hover:scale-110 transition-transform duration-150 ease-in-out"
+              class="h-auto w-full hover:scale-110 transition-transform duration-150 ease-in-out"
               loading="lazy"
               decoding="async"
             />
